update home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,13 +29,16 @@
 <div class="d-flex align-items-center justify-content-center mb-3">
   <p class="fs-4 fw-bold text-center">Frontend Developer & UI Engineer</p>
 </div>
-<p class="text-center ps-2 pe-2 mb-0">
+<!-- <p class="text-center ps-2 pe-2 mb-0">
   <i
-    >I'm helping accelerate the transition to autonomous farming at
-    <a href="https://vergeag.com/"><b>Verge Agriculture</b></a></i
+    >My latest pet project is a
+    <a href="https://keeganosler.github.io/pomodoro/"
+      ><b>customizable timer</b></a
+    >
+    with font, colour and theme switching.</i
   >
-</p>
-<p class="text-center pt-2 ps-2 pe-2">
+</p> -->
+<!-- <p class="text-center pt-2 ps-2 pe-2">
   <i
     >Read my latest tutorial on how to
     <a
@@ -43,7 +46,7 @@
       ><b>Access an Angular App outside localhost</b></a
     ></i
   >
-</p>
+</p> -->
 <div class="w-100 d-flex justify-content-center">
   <div
     #buttons
@@ -120,3 +123,12 @@
     > -->
   </div>
 </div>
+<p class="text-center ps-2 pe-2 mt-4">
+  <i
+    >My latest pet project is a
+    <a href="https://keeganosler.github.io/pomodoro/"
+      ><b>customizable timer</b></a
+    >
+    with font, colour and theme switching.</i
+  >
+</p>
