new color themes

--- a/src/scss/theme/_colors.scss
+++ b/src/scss/theme/_colors.scss
@@ -1,5 +1,71 @@
 @import "@angular/material/theming";
 
+$primary-palette: (
+  50 : #f1eefb,
+  100 : #dcd4f5,
+  200 : #c5b7ef,
+  300 : #ad9ae9,
+  400 : #9c85e4,
+  500 : #8a6fdf,
+  600 : #8267db,
+  700 : #775cd7,
+  800 : #6d52d2,
+  900 : #5a40ca,
+  A100 : #ffffff,
+  A200 : #ece8ff,
+  A400 : #c2b5ff,
+  A700 : #ad9cff,
+  contrast: (
+      50 : #000000,
+      100 : #000000,
+      200 : #000000,
+      300 : #000000,
+      400 : #000000,
+      500 : #000000,
+      600 : #ffffff,
+      700 : #ffffff,
+      800 : #ffffff,
+      900 : #ffffff,
+      A100 : #000000,
+      A200 : #000000,
+      A400 : #000000,
+      A700 : #000000,
+  )
+);
+
+$secondary-palette: (
+  50 : #fffbe3,
+  100 : #fff4b9,
+  200 : #ffed8a,
+  300 : #ffe65b,
+  400 : #ffe038,
+  500 : #ffdb15,
+  600 : #ffd712,
+  700 : #ffd20f,
+  800 : #ffcd0c,
+  900 : #ffc406,
+  A100 : #ffffff,
+  A200 : #fffcf3,
+  A400 : #ffeec0,
+  A700 : #ffe8a7,
+  contrast: (
+      50 : #000000,
+      100 : #000000,
+      200 : #000000,
+      300 : #000000,
+      400 : #000000,
+      500 : #000000,
+      600 : #000000,
+      700 : #000000,
+      800 : #000000,
+      900 : #000000,
+      A100 : #000000,
+      A200 : #000000,
+      A400 : #000000,
+      A700 : #000000,
+  )
+);
+
 $surface-palette: (
   50: #ffffff,
   100: #f5f5f5,
@@ -33,77 +99,10 @@ $surface-palette: (
   ),
 );
 
-$pink-palette: (
-  50: #f8e8f2,
-  100: #f0c6e1,
-  200: #e9a2cd,
-  300: #e580b9,
-  400: #e269a7,
-  500: #e25897,
-  600: #d05490,
-  700: #b84f85,
-  800: #923a67,
-  900: #662948,
-  A100: #ffffff,
-  A200: #ffffff,
-  A400: #ffffff,
-  A700: #ffffff,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #000000,
-    600: #000000,
-    700: #000000,
-    800: #000000,
-    900: #000000,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
-  ),
-);
-
-$blue-palette: (
-  (
-    50: #eff9fa,
-    100: #d0ecf0,
-    200: #b1dfe7,
-    300: #73c6d3,
-    400: #43b2c3,
-    500: #369bab,
-    600: #2c7f8c,
-    700: #22636d,
-    800: #14383e,
-    900: #0a1c1f,
-    A100: #ffffff,
-    A200: #ffffff,
-    A400: #d2eeff,
-    A700: #b8e5ff,
-    contrast: (
-      50: #000000,
-      100: #000000,
-      200: #000000,
-      300: #000000,
-      400: #000000,
-      500: #000000,
-      600: #000000,
-      700: #000000,
-      800: #000000,
-      900: #000000,
-      A100: #000000,
-      A200: #000000,
-      A400: #000000,
-      A700: #000000,
-    ),
-  )
-);
-
 $warn: mat-palette($mat-red);
 
-$pink-500: map-get($pink-palette, 500);
+$primary-900: map-get($primary-palette, 900);
+$secondary-900: map-get($secondary-palette, 900);
 
 $surface-50: map-get($surface-palette, 50);
 $surface-200: map-get($surface-palette, 200);
