--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,116 +19,64 @@
     ><fa-icon [icon]="faMoon"></fa-icon
   ></mat-icon>
 </div>
-<div class="head d-flex align-items-end justify-content-center mb-3">
-  <p class="header fs-1 text-center fw-bold">
-    Hey, I'm Keegan<mat-icon inline class="ms-2 primary-icon"
-      ><fa-icon class="pt-4" [icon]="faGlasses"></fa-icon
-    ></mat-icon>
-  </p>
+<div class="head d-flex align-items-end justify-content-start ms-4 mb-1">
+  <p class="header fs-1 fw-bold">Hey, I'm Keegan</p>
 </div>
-<div class="d-flex align-items-center justify-content-center mb-3">
-  <p class="fs-4 fw-bold text-center">Frontend Developer & UI Engineer</p>
+<div class="d-flex align-items-center justify-content-start ms-4 mb-1">
+  <p class="fs-4 fw-bold">Frontend & Design Developer</p>
 </div>
-<!-- <p class="text-center ps-2 pe-2 mb-0">
-  <i
-    >My latest pet project is a
-    <a href="https://keeganosler.github.io/pomodoro/"
-      ><b>customizable timer</b></a
-    >
-    with font, colour and theme switching.</i
+<div class="d-flex flex-column">
+  <button
+    mat-stroked-button
+    class="ms-4 mb-4"
+    [ngClass]="{
+      'button-dark-mode': theme == 'dark-theme',
+      'button-light-mode': theme == ''
+    }"
+    (click)="onLinkClick('github')"
   >
-</p> -->
-<!-- <p class="text-center pt-2 ps-2 pe-2">
-  <i
-    >Read my latest tutorial on how to
-    <a
-      href="https://medium.com/@oslerkeegan/access-an-angular-app-outside-localhost-ab64da582fce"
-      ><b>Access an Angular App outside localhost</b></a
-    ></i
+    <div class="d-flex align-items-center justify-content-center">
+      <fa-icon [icon]="faGithub" class="fs-4 me-2"></fa-icon>Github
+    </div>
+  </button>
+  <button
+    mat-stroked-button
+    class="ms-4 mb-4"
+    [ngClass]="{
+      'button-dark-mode': theme == 'dark-theme',
+      'button-light-mode': theme == ''
+    }"
+    (click)="onLinkClick('linkedin')"
   >
-</p> -->
-<div class="w-100 d-flex justify-content-center">
-  <div
-    #buttons
-    class="d-flex flex-wrap justify-content-evenly pt-2 buttons-container"
+    <div class="d-flex align-items-center justify-content-center">
+      <fa-icon [icon]="faLinkedin" class="fs-4 me-2"></fa-icon>LinkedIn
+    </div>
+  </button>
+  <button
+    mat-stroked-button
+    class="ms-4 mb-4"
+    [ngClass]="{
+      'button-dark-mode': theme == 'dark-theme',
+      'button-light-mode': theme == ''
+    }"
+    (click)="onLinkClick('stack')"
   >
-    <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('github')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faGithub" class="fs-4 me-2"></fa-icon>Github
-      </div>
-    </button>
-    <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('linkedin')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faLinkedin" class="fs-4 me-2"></fa-icon>LinkedIn
-      </div>
-    </button>
-    <!-- <button mat-flat-button color="primary" class="social-button m-2">
-      <fa-icon [icon]="faEnvelope" class="fs-4 me-2"></fa-icon>Send me an Email
-    </button> -->
-    <!-- <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('instagram')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faInstagram" class="fs-4 me-2"></fa-icon>Instagram
-      </div>
-    </button> -->
-    <!-- <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('discord')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faDiscord" class="fs-4 me-2"></fa-icon>Discord
-      </div>
-    </button> -->
-    <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('stack')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faStackOverflow" class="fs-4 me-2"></fa-icon>Stack
-        Overflow
-      </div>
-    </button>
-    <button
-      mat-flat-button
-      color="primary"
-      class="social-button m-2"
-      (click)="onLinkClick('medium')"
-    >
-      <div class="d-flex align-items-center justify-content-center">
-        <fa-icon [icon]="faMedium" class="fs-4 me-2"></fa-icon>Medium
-      </div>
-    </button>
-    <!-- <a
-      ><button mat-flat-button color="primary" class="social-button m-2">
-        <fa-icon [icon]="faDownload" class="fs-4 me-2"></fa-icon>Download my DV
-      </button></a
-    > -->
-  </div>
+    <div class="d-flex align-items-center justify-content-center">
+      <fa-icon [icon]="faStackOverflow" class="fs-4 me-2"></fa-icon>Stack
+      Overflow
+    </div>
+  </button>
+  <button
+    mat-stroked-button
+    class="ms-4"
+    [ngClass]="{
+      'button-dark-mode': theme == 'dark-theme',
+      'button-light-mode': theme == ''
+    }"
+    (click)="onLinkClick('medium')"
+  >
+    <div class="d-flex align-items-center justify-content-center">
+      <fa-icon [icon]="faMedium" class="fs-4 me-2"></fa-icon>Medium
+    </div>
+  </button>
 </div>
-<p class="text-center ps-2 pe-2 mt-4">
-  <i
-    >My latest pet project is a
-    <a href="https://keeganosler.github.io/pomodoro/"
-      ><b>customizable timer</b></a
-    >
-    with font, colour and theme switching.</i
-  >
-</p>
