--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,4 +79,6 @@
       <fa-icon [icon]="faMedium" class="fs-4 me-2"></fa-icon>Medium
     </div>
   </button>
+
+  <kee-button></kee-button>
 </div>
