--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 @import "./theme/bootstrap-modules";
-@import "./theme/mat-theme.scss";
+@import "./helpers/mixins.scss";
 
 @include light-theme();
 
