--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,8 @@
-
+.button--text {
+    border: none;
+    border-bottom: 3px solid green;
+    background: transparent;
+    font-style: italic;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
