--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,48 @@
+$breakpoint: 768px;
+
+.buttons-container {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+    @media (max-width: $breakpoint) {
+        flex-direction: column;
+        gap: 30px;
+    }
+}
+
 .button--text {
+    padding: none;
     border: none;
-    border-bottom: 3px solid green;
+    border-bottom: 3px solid #C71585;
     background: transparent;
-    font-style: italic;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
+    font-family: monospace;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.theme-switcher {
+    display: flex;
+  
+    button {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #f5f5f5;
+      background-color: #f5f5f5;
+      cursor: pointer;
+      transition: background-color 0.3s;
+  
+      &:first-child {
+        border-radius: 5px 0 0 5px;
+      }
+  
+      &:last-child {
+        border-radius: 0 5px 5px 0;
+      }
+    }
+}  
+
+.selected {
+  background: #e07ebb !important;
+  border-color: #e07ebb !important;
 }
