restyle 3 and split up into components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,1 @@
-<div class="position-absolute">
-  <div class="theme-switcher">
-    <button
-      class="segmented-button"
-      [ngClass]="{ selected: theme === 'light-theme' }"
-      (click)="onThemeChange('light-theme')"
-    >
-      <fa-icon [icon]="faSun"></fa-icon>
-    </button>
-    <button
-      class="segmented-button"
-      [ngClass]="{ selected: theme === 'dark-theme' }"
-      (click)="onThemeChange('dark-theme')"
-    >
-      <fa-icon [icon]="faMoon"></fa-icon>
-    </button>
-  </div>
-</div>
-<div class="h-100 w-100 d-flex align-items-center justify-content-center">
-  <div class="d-flex flex-column align-items-center">
-    <p class="fs-1 fw-bold">Hey, I'm Keegan</p>
-    <p class="fs-5 fw-bold">Frontend & Design Developer</p>
-    <div class="buttons-container pt-2">
-      <button class="button--text" (click)="onLinkClick('github')">
-        <span class="d-flex align-items-center justify-content-center">
-          <fa-icon [icon]="faGithub" class="me-2"></fa-icon>Github
-        </span>
-      </button>
-      <button class="button--text" (click)="onLinkClick('linkedin')">
-        <span class="d-flex align-items-center justify-content-center">
-          <fa-icon [icon]="faLinkedin" class="me-2"></fa-icon>LinkedIn
-        </span>
-      </button>
-      <button class="button--text" (click)="onLinkClick('stack')">
-        <span class="d-flex align-items-center justify-content-center">
-          <fa-icon [icon]="faStackOverflow" class="me-2"></fa-icon>Stack
-          Overflow
-        </span>
-      </button>
-      <button class="button--text" (click)="onLinkClick('medium')">
-        <span class="d-flex align-items-center justify-content-center">
-          <fa-icon [icon]="faMedium" class="me-2"></fa-icon>Medium
-        </span>
-      </button>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
