--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,10 +11,10 @@ $breakpoint: 768px;
     }
 }
 
-.button--text {
+.link {
     padding: none;
     border: none;
-    border-bottom: 3px solid #C71585;
+    border-bottom: 2px solid #C71585;
     background: transparent;
     font-family: monospace;
     font-weight: 500;
@@ -27,10 +27,16 @@ $breakpoint: 768px;
     button {
       flex: 1;
       padding: 10px;
-      border: 1px solid #f5f5f5;
-      background-color: #f5f5f5;
+      border: 1px solid transparent;
+      background-color: transparent;
       cursor: pointer;
       transition: background-color 0.3s;
+
+      	box-shadow:
+		/* offset-x | offset-y | blur-radius | spread-radius | color */
+		0px 3px 4px 0px hsla(0,0%,0%,0.14), 
+		0px 3px 3px -2px hsla(0,0%,0%,0.12), 
+		0px 1px 8px 0px hsla(0,0%,0%,0.2);
   
       &:first-child {
         border-radius: 5px 0 0 5px;
@@ -42,7 +48,8 @@ $breakpoint: 768px;
     }
 }  
 
-.selected {
+.theme-switcher__button--selected {
   background: #e07ebb !important;
   border-color: #e07ebb !important;
+  //border-radius: 5px !important;
 }
