--- a/src/app/shared/components/theme-switcher/theme-switcher.component.scss
+++ b/src/app/shared/components/theme-switcher/theme-switcher.component.scss
@@ -8,7 +8,7 @@ $light-pink: #e07ebb;
       border: 1px solid transparent;
       background-color: transparent;
       cursor: pointer;
-      transition: background-color 0.3s;
+      transition: background-color 0.1s;
       box-shadow: 0px 3px 4px 0px hsla(0,0%,0%,0.14), 
                     0px 3px 3px -2px hsla(0,0%,0%,0.12), 
                     0px 1px 8px 0px hsla(0,0%,0%,0.2);
@@ -23,7 +23,7 @@ $light-pink: #e07ebb;
 
       &.theme-switcher__button--selected {
         background: $light-pink;
-        border-color: $light-pink;
+        border-color: transparent;
       }
     }
 }  
