--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,6 +7,7 @@ $breakpoint: 768px;
 
     @media (max-width: $breakpoint) {
         flex-direction: column;
+        align-items: center;
         gap: 30px;
     }
 }
