add app version indicator, update gitignore

--- a/src/app/shared/components/theme-switcher/theme-switcher.component.html
+++ b/src/app/shared/components/theme-switcher/theme-switcher.component.html
@@ -1,4 +1,4 @@
-<div class="theme-switcher position-absolute p-2">
+<div class="theme-switcher p-2">
   <button
     class="theme-switcher__button"
     [ngClass]="{
