--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,9 @@
-<app-theme-switcher></app-theme-switcher>
+<div
+  class="position-absolute w-100 d-flex flex-row align-items-center justify-content-between"
+>
+  <app-theme-switcher></app-theme-switcher>
+  <app-version></app-version>
+</div>
 <div class="h-100 w-100 d-flex align-items-center justify-content-center">
   <div class="d-flex flex-column align-items-center">
     <p class="fs-1 fw-bold">Keegan Osler</p>
