--- a/src/app/shared/components/theme-switcher/theme-switcher.component.html
+++ b/src/app/shared/components/theme-switcher/theme-switcher.component.html
@@ -8,7 +8,7 @@
     type="button"
     aria-label="light theme"
   >
-    <fa-icon [icon]="faSun"></fa-icon>
+    <app-icon [iconName]="'sun'"></app-icon>
   </button>
   <button
     class="theme-switcher__button"
@@ -17,6 +17,6 @@
     type="button"
     aria-label="light theme"
   >
-    <fa-icon [icon]="faMoon"></fa-icon>
+    <app-icon [iconName]="'moon'"></app-icon>
   </button>
 </div>
