--- a/src/app/shared/components/link/link.component.scss
+++ b/src/app/shared/components/link/link.component.scss
@@ -1,9 +1,14 @@
 .link {
-    padding: none;
+    padding: 6px 0;
     border: none;
     border-bottom: 2px solid #C71585;
     background: transparent;
     font-family: monospace;
     font-weight: 500;
     font-size: 16px;
+
+    img {
+        height: 18px;
+        width: 18px;
+    }
 }
